--- a/Index.html
+++ b/Index.html
@@ -200,41 +200,24 @@
             </p>
             <a href="#about" class="btn btn-primary">Ver projeto!</a>
             <li>
-              <a href="#"><img src="assets/github.png" alt="Github" /></a>
+              <a href="https://github.com/LucasSantoslpo/Relogio-digital.git"><img src="assets/github.png" alt="Github" /></a>
             </li> 
           </div>
         </li>
         <li>
           <div class="image">
-            <img src="assets/delivery.png" alt="delivery" />
-          </div>
+            <img src="assets/Portifolio.png" alt="delivery" />
+          
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Landing Page.
+              Portfólio.
             </h3>
             <p>
-              Landing page responsiva desenvolvida com HTML, CSS e JAVASCRIPT.
+              Site currículo desenvolvido com HTML, CSS e JAVASCRIPT.
             </p>
             <a href="#about" class="btn btn-primary">Ver projeto!</a>
             <li>
-              <a href="#"><img src="assets/github.png" alt="Github" /></a>
-            </li> 
-          </div>
-        </li>
-        <li>
-          <div class="image">
-            <img src="assets/delivery.png" alt="delivery" />
-          </div>
-          <div class="projects__info">
-            <h3 class="tertiary-title">
-              Landing Page.
-            </h3>
-            <p>
-              Landing page responsiva desenvolvida com HTML,CSS e JAVASCRIPT.
-            </p>
-            <a href="#about" class="btn btn-primary">Ver projeto!</a>
-            <li>
-              <a href="#"><img src="assets/github.png" alt="Github" /></a>
+              <a href="https://github.com/LucasSantoslpo/Portifolio-ls"><img src="assets/github.png" alt="Github" /></a>
             </li> 
           </div>
         </li>
