--- a/Index.html
+++ b/Index.html
@@ -198,7 +198,7 @@
             <p>
               Esse projeto foi desenvolvido com HTML, CSS e JAVASCRIPT.
             </p>
-            <a href="#about" class="btn btn-primary">Ver projeto!</a>
+            <a href="https://lucassantoslpo.github.io/Rel-gio-digital.github.io/" class="btn btn-primary">Ver projeto!</a>
             <li>
               <a href="https://github.com/LucasSantoslpo/Relogio-digital.git"><img src="assets/github.png" alt="Github" /></a>
             </li> 
