--- a/Index.html
+++ b/Index.html
@@ -179,7 +179,7 @@
             <p>
               Esse projeto foi desenvolvido usando HTML, CSS e JAVASCRIPT.
             </p>
-            <a href="#about" class="btn btn-primary">Ver projeto!</a>
+            <a href="https://lucassantoslpo.github.io/Gerador-de-senha/" class="btn btn-primary">Ver projeto!</a>
             <li>
               <a href="#"><img src="assets/github.png" alt="Github" /></a>
             </li> 
@@ -215,7 +215,7 @@
             <p>
               Site currículo desenvolvido com HTML, CSS e JAVASCRIPT.
             </p>
-            <a href="#about" class="btn btn-primary">Ver projeto!</a>
+            
             <li>
               <a href="https://github.com/LucasSantoslpo/Portifolio-ls"><img src="assets/github.png" alt="Github" /></a>
             </li> 
