--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,7 @@
         </p>
         <p>
           Atualmente estou estudando as principais liguagens e materias para front-end, sendo elas:
-          Lógica de programação, utilizando Javascript como liguagem de estudo; HTML, CSS e Reactjs, Angularjs
+          Lógica de programação, utilizando Javascript como liguagem de estudo; HTML, CSS, Reactjs, Angularjs,
           e Javascript de forma isolada.
         </p>
         <p>
