--- a/Index.html
+++ b/Index.html
@@ -95,7 +95,7 @@
             de Analise e Desenvolvimento de Sistemas na faculadade UNIP.
         </p>
         <p>
-          Atualmente estou estudando as principais liguagens e materias para front-end, sendo elas:
+          Estudo as principais liguagens e materias para front-end, sendo elas:
           Lógica de programação, utilizando Javascript como liguagem de estudo; HTML, CSS, Reactjs, Angularjs,
           e Javascript de forma isolada.
         </p>
