--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
         </p>
         <ul>
           <li>
-            <a href="#"><img src="assets/github.png" alt="Github" /></a>
+            <a href="https://github.com/LucasSantoslpo"><img src="assets/github.png" alt="Github" /></a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/lucas-arnaldo-61b17b198/"><img src="assets/linkdin.png" alt="Linkedin" /></a>
