--- a/Index.html
+++ b/Index.html
@@ -236,7 +236,7 @@
         </div>
         <ul class="mb-l">
             <li>
-                <a href="#"><img src="assets/github.png" alt="Github" /></a>
+                <a href="https://github.com/LucasSantoslpo"><img src="assets/github.png" alt="Github" /></a>
               </li> 
         <li>
             <a href="https://wa.me/5561981438911"><img src="assets/Whatsapp.png" alt="Instagram" /></a>
