Atualização de quem sou eu.

--- a/404erro.html
+++ b/404erro.html
@@ -67,9 +67,11 @@
       <div class="about__left">
         <h2 class="secondary-title">Além do código: quem sou eu?</h2>
         <p>
-          Além da área de tecnologia tenho ingês intermediario (leio, porém tenho dificuldade com escutatória),
-          Sou aplicado em tudo que me disponho a fazer e sempre procuro soluções para problemas
-          que eventualmente não consiga resolver. Trabalho bem em equipe e sou bem organizado.
+          Profissional de Tecnologia da Informação com especialização em Desenvolvimento Web com foco em Vendas. 
+Experiente em HTML, CSS, e JavaScript, com habilidades sólidas em web design e implementação de soluções digitais. 
+Expertise comprovada em vendas e utilização eficaz de CRM (Customer Relationship Management) 
+para maximizar oportunidades de leads e otimizar processos de vendas Além disso, possui excelentes habilidades interpessoais, 
+incluindo capacidade de comunicação eficaz, trabalho em equipe colaborativo e foco no atendimento ao cliente para garantir relações duradouras.
         </p>
         <ul>
           <li>
